--- a/styles/globalStyles.scss
+++ b/styles/globalStyles.scss
@@ -1,6 +1,6 @@
 @use "./abstracts/" as *;
 
-@import url("https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Bellefair&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@400;700&family=Bellefair&display=swap");
 
 *,
 *::before,
