--- a/styles/componentStyles/Header.module.scss
+++ b/styles/componentStyles/Header.module.scss
@@ -1,14 +1,20 @@
 @use "../abstracts/" as *;
 
 .header {
+  max-width: calc(1400px + (100vw - 1440px) / 2);
   position: absolute;
   z-index: 10;
   top: 40px;
+  right: 0;
   height: 96px;
   width: 100%;
   display: grid;
   align-items: center;
   grid-template-columns: 1fr 1fr;
+
+  .logo {
+    margin-left: 15px;
+  }
 
   nav {
     height: 100%;
