--- a/styles/pagesStyles/Index.module.scss
+++ b/styles/pagesStyles/Index.module.scss
@@ -1,3 +1,5 @@
+@use "../abstracts/" as *;
+
 .backgroundImage {
   position: fixed;
   width: 100vw;
@@ -7,4 +9,54 @@
 .container {
   position: relative;
   z-index: 2;
+  height: 100vh;
+  width: 100v;
+
+  display: grid;
+  grid-template-columns: 50% 50%;
+
+  .description {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+  }
+
+  .descriptionWrapper {
+    margin-right: 7.3%;
+    margin-bottom: 14.5%;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+
+  h5 {
+    @include heading05();
+    max-width: 450px;
+  }
+
+  h1 {
+    @include heading01();
+    max-width: 450px;
+  }
+
+  p {
+    @include body-txt();
+    max-width: 450px;
+  }
+
+  .buttonWrapper {
+    display: flex;
+    align-items: flex-end;
+  }
+
+  a {
+    margin-left: 19.5%;
+    margin-bottom: 14.5%;
+  }
+
+  button {
+    @include main-button();
+  }
 }
