--- a/styles/abstracts/_clickable.scss
+++ b/styles/abstracts/_clickable.scss
@@ -18,6 +18,7 @@
   }
 
   border-radius: 50%;
+  border-width: 0;
   font-family: $primary-font;
   font-size: 32px;
 
@@ -31,7 +32,7 @@
   &:hover {
     box-shadow: 0px 0px 0px 88px rgba(white, 0.1);
 
-    @include for-tablet-and-down {
+    @media (max-width: 1075px) {
       box-shadow: none;
     }
   }
