--- a/styles/pagesStyles/Index.module.scss
+++ b/styles/pagesStyles/Index.module.scss
@@ -10,10 +10,16 @@
   position: relative;
   z-index: 2;
   height: 100vh;
-  width: 100v;
+  width: 100vw;
 
   display: grid;
   grid-template-columns: 50% 50%;
+
+  @media (max-width: 1075px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
   .description {
     width: 100%;
@@ -21,14 +27,26 @@
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
+
+    @media (max-width: 1075px) {
+      height: auto;
+      justify-content: center;
+      margin-top: 140px;
+    }
   }
 
   .descriptionWrapper {
-    margin-right: 7.3%;
+    margin-right: 14.5%;
     margin-bottom: 14.5%;
     display: flex;
     flex-direction: column;
     gap: 24px;
+
+    @media (max-width: 1075px) {
+      margin-right: 0;
+      margin-bottom: 0;
+      gap: 0;
+    }
   }
 
   h5 {
@@ -49,11 +67,21 @@
   .buttonWrapper {
     display: flex;
     align-items: flex-end;
+
+    @media (max-width: 1075px) {
+      display: block;
+      margin-top: 32px;
+    }
   }
 
   a {
     margin-left: 19.5%;
     margin-bottom: 14.5%;
+
+    @media (max-width: 1075px) {
+      margin-left: 0;
+      margin-bottom: 0;
+    }
   }
 
   button {
