--- a/styles/abstracts/_typography.scss
+++ b/styles/abstracts/_typography.scss
@@ -47,6 +47,11 @@ $body-txt-mobile-font-size: 15px;
   color: $light-clr;
   font-family: $primary-font;
   font-size: $heading01-desktop-font-size;
+
+  @include for-tablet-and-down {
+    text-align: center;
+  }
+
   @include for-phone-only {
     font-size: $heading01-mobile-font-size;
   }
@@ -99,6 +104,7 @@ $body-txt-mobile-font-size: 15px;
   font-size: $heading05-desktop-font-size;
   letter-spacing: $heading05-desktop-letter-spacing;
   @include for-tablet-and-down {
+    text-align: center;
     font-size: $heading05-tablet-font-size;
     letter-spacing: $heading05-tablet-letter-spacing;
   }
