--- a/styles/componentStyles/Header.module.scss
+++ b/styles/componentStyles/Header.module.scss
@@ -48,7 +48,7 @@
   .closeIcon[data-click="true"] {
     opacity: 0;
     transition-property: opacity;
-    transition-duration: 100ms;
+    transition-duration: $duration-fast;
   }
 
   nav {
@@ -71,7 +71,7 @@
       transform: scaleX(0);
       transform-origin: right;
       transition-property: transform;
-      transition-duration: 100ms;
+      transition-duration: $duration-fast;
     }
   }
 
@@ -79,12 +79,12 @@
     transform: scaleX(1);
     transform-origin: right;
     transition-property: transform;
-    transition-duration: 100ms;
+    transition-duration: $duration-fast;
 
     li {
       opacity: 1;
       transition-property: opacity;
-      transition-duration: 100ms;
+      transition-duration: $duration-fast;
     }
   }
 
@@ -123,7 +123,7 @@
       height: 31px;
       opacity: 0;
       transition-property: opacity;
-      transition-duration: 100ms;
+      transition-duration: $duration-fast;
     }
 
     &::after {
@@ -135,7 +135,7 @@
       background-color: $light-clr;
       opacity: 0;
       transition-property: opacity;
-      transition-duration: 250ms;
+      transition-duration: $duration-medium;
 
       @include for-phone-only {
         height: 100%;
@@ -147,7 +147,7 @@
     &:hover::after {
       opacity: 0.5;
       transition-property: opacity;
-      transition-duration: 250ms;
+      transition-duration: $duration-medium;
     }
   }
 
