--- a/styles/pagesStyles/Destination.module.scss
+++ b/styles/pagesStyles/Destination.module.scss
@@ -4,6 +4,14 @@
   position: relative;
   z-index: 2;
 
+  @include for-small-screens-and-down {
+    scale: 0.8;
+  }
+
+  @include for-tablet-and-down {
+    scale: 1;
+  }
+
   height: 100vh;
   width: min(1400px, 100vw - 77px);
   margin-inline: auto;
